<resources>
    <string name="app_name">GV</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litros">Preço por Litros</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litros">Kms por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="informe_valores_validos">Por favor, informe valores válidos!</string>
</resources>